Add secure router in k8s and ocp